fixed learn more not showing between requests

--- a/web/content/css/style.css
+++ b/web/content/css/style.css
@@ -491,6 +491,7 @@ textarea {
   * ---------------------------- */
   
 #learn-more-wrap{
+	display:none;
 	width:100%;
 	margin-left:10px;
 	color: #999;
